Fixed unstyled button text align

--- a/assets/scss/_button.scss
+++ b/assets/scss/_button.scss
@@ -32,6 +32,7 @@
   font-size: inherit;
   font-weight: inherit;
   line-height: inherit;
+  text-align: inherit;
   border: none;
   color: inherit;
   background: none;
